<resources>
    <string name="app_name">My Application</string>

    <string name="to_continue">CONTINUAR</string>
    <string name="version">Version 1.0</string>
    <string name="instru1">es usuario es obligatorio</string>
    <string name="instru2">el usuario o contraseña son incorrectos</string>
    <string name="instru3">La contraseña debe ser de al menos 4 digitos</string>
    <string name="instru0">Instrucciones varias para el proceso login</string>
    <string name="contraseña">Contraseña</string>
    <string name="Nom_usu">Nombre del Usuario</string>
    <string name="centro">Titulo</string>
    <string name="wel">Bienvenido :) </string>

</resources>